--- a/RealRestApi/Properties/launchSettings.json
+++ b/RealRestApi/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     },
     "RealRestApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
